# LearnModernCMake

./: CMakeLists.txt  README.md  main.cpp
HelloWorldLibrary/: CMakeLists.txt  HelloWorldConfig.cmake.in
HelloWorldLibrary/include/: HelloWorld.h
HelloWorldLibrary/source/: HelloWorld.cpp
cmake_utils/: CPack.cmake
